<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UST Activity Spot</string>
    <string name="textView">COLLEGES AND FACULTY</string>
    <string name="arch">College of Architecture</string>
    <string name="educ">College of Education</string>
    <string name="nurse">College of Nursing</string>
    <string name="sci">College of Science</string>
    <string name="music">Conservatory of Music</string>
    <string name="eng">Faculty of Engineering</string>
    <string name="account">AMV College of Accountancy</string>
    <string name="commerce">College of Commerce and Business Administration</string>
    <string name="cfad">College of Fine Arts and Design</string>
    <string name="ab">Faculty of Arts and Letters</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_arch">College of Architecture</string>
    <string name="textView1">Beato Angelico Building</string>
    <string name="actspot1">Pavilion</string>
    <string name="title_activity_educ">College of Education</string>
    <string name="textView2">Albertus Magnus Building</string>
    <string name="actspot2">Auditorium</string>
    <string name="title_activity_nurse">College of Nursing</string>
    <string name="textView3">St. Martin de Porres Building</string>
    <string name="actspot3">UST Medicine Auditorium</string>
    <string name="title_activity_science">College of Science</string>
    <string name="textView4">UST Main Building</string>
    <string name="actspot4">Benavides Park</string>
    <string name="title_activity_music">Conservatory of Music</string>
    <string name="textView5">Albertus Magnus Building</string>
    <string name="actspot5">Pavilion</string>
    <string name="title_activity_engg">Faculty of Engineering</string>
    <string name="textView6">Roque Ruaño Building</string>
    <string name="actspot6">Conference Hall</string>
    <string name="title_activity_account">AMV College of Accountancy</string>
    <string name="textView7">Alfredo M. Velayo Building</string>
    <string name="actspot7">Benavides Park</string>
    <string name="title_activity_commerce">College of Commerce and Business Administration</string>
    <string name="textView8">St. Raymund de Peñafort Building</string>
    <string name="actspot8">Quadricentennial Park</string>
    <string name="title_activity_cfad">College of Fine Arts and Design</string>
    <string name="textView9">Beato Angelico Building</string>
    <string name="actspot9">Pavilion</string>
    <string name="title_activity_ab">Faculty of Arts and Letters</string>
    <string name="textView10">St. Raymund de Peñafort Building</string>
    <string name="actspot10">Quadricentennial Park</string>
    <string name="title_activity_last__ab">Faculty of Arts and Letters</string>
    <string name="act10">Possible Activities:</string>
    <string name="res10">Resources:</string>
    <string name="dd10">Dos and Donts:</string>
    <string name="cap10">Capacity:</string>
    <string name="title_activity_last__account">AMV College of Accountancy</string>
    <string name="act7">Possible Activities:</string>
    <string name="res7">Resources:</string>
    <string name="dd7">Dos and Donts:</string>
    <string name="cap7">Capacity:</string>
    <string name="title_activity_last__arch">College of Architecture</string>
    <string name="act1">Possible Activities:</string>
    <string name="res1">Resources:</string>
    <string name="dd1">Dos and Donts:</string>
    <string name="cap1">Capacity:</string>
    <string name="title_activity_last__educ">College of Education</string>
    <string name="act2">Possible Activities:</string>
    <string name="res2">Resources:</string>
    <string name="dd2">Dos and Donts:</string>
    <string name="cap2">Capacity:</string>
    <string name="title_activity_last__nurse">College of Nursing</string>
    <string name="act3">Possible Activities:</string>
    <string name="res3">Resources:</string>
    <string name="dd3">Dos and Donts:</string>
    <string name="cap3">Capacity:</string>
    <string name="title_activity_last__science">College of Science</string>
    <string name="act4">Possible Activities:</string>
    <string name="res4">Resources:</string>
    <string name="dd4">Dos and Donts:</string>
    <string name="cap4">Capacity:</string>
    <string name="title_activity_last__music">Conservatory of Music</string>
    <string name="act5">Possible Activities:</string>
    <string name="res5">Resources:</string>
    <string name="dd5">Dos and Donts:</string>
    <string name="cap5">Capacity:</string>
    <string name="title_activity_last__engg">Faculty of Engineering</string>
    <string name="act6">Possible Activities:</string>
    <string name="res6">Resources:</string>
    <string name="dd6">Dos and Donts:</string>
    <string name="cap6">Capacity:</string>
    <string name="title_activity_last__commerce">College Commerce and Business Administration</string>
    <string name="act8">Possible Activities:</string>
    <string name="res8">Resources:</string>
    <string name="dd8">Dos and Donts:</string>
    <string name="cap8">Capacity:</string>
    <string name="title_activity_last__cfad">College of Fine Arts and Design</string>
    <string name="act9">Possible Activities:</string>
    <string name="res9">Resources:</string>
    <string name="dd9">Dos and Donts:</string>
    <string name="cap9">Capacity:</string>
    <string name="text1">Places inside and outside the building:</string>
    <string name="text2">Places inside and outside the building:</string>
    <string name="text3">Places inside and outside the building:</string>
    <string name="text4">Places inside and outside the building:</string>
    <string name="text5">Places inside and outside the building:</string>
    <string name="text6">Places inside and outside the building:</string>
    <string name="text7">Places inside and outside the building:</string>
    <string name="text8">Places inside and outside the building:</string>
    <string name="text9">Places inside and outside the building:</string>
    <string name="text10">Places inside and outside the building:</string>

    <string name="des1"></string>
    <string name="des2"></string>
    <string name="des3"></string>
    <string name="des4"></string>
    <string name="des5"></string>
    <string name="des6"></string>
    <string name="des7"></string>
    <string name="des8"></string>
    <string name="des9"></string>
    <string name="des10"></string>

</resources>
